更新支付失败时的错误提示，更新logo、名称

--- a/pages/app-auth/index.wxml
+++ b/pages/app-auth/index.wxml
@@ -2,7 +2,7 @@
     <view class='logo'>
         <image class='logo-img' src='http://lucky-icon.meiweiyuxian.com/hio/logo.png'></image>
     </view>
-    <view class='logo-name'>海鸥商城</view>
+    <view class='logo-name'>海风小店</view>
     <view class='intro'>开源微信小程序商城</view>
     <view class='login'>请完成微信授权以继续使用</view>
     <button class='btn-login' open-type="getUserInfo" bindgetuserinfo='getUserInfo'>
