--- a/pages/ucenter/index/index.wxml
+++ b/pages/ucenter/index/index.wxml
@@ -94,7 +94,7 @@
     </view>
     <view class="company">
         <view class="c-wrap">
-            <view class="text">海鸥商城</view>
+            <view class="text">海风小店</view>
             <view class="line"></view>
         </view>
         <view class="tip">开源微信小程序商城</view>
