--- a/pages/app-auth/index.wxml
+++ b/pages/app-auth/index.wxml
@@ -1,6 +1,6 @@
 <view class="container">
     <view class='logo'>
-        <image class='logo-img' src='http://lucky-icon.meiweiyuxian.com/hio/logo.png'></image>
+        <image class='logo-img' src='http://lucky-icon.meiweiyuxian.com/hio/pinwheel.jpg'></image>
     </view>
     <view class='logo-name'>海风小店</view>
     <view class='intro'>开源微信小程序商城</view>
