--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -13,9 +13,9 @@
             </view>
         </view>
         <block wx:if="{{gallery.length > 0}}">
-            <swiper bindchange="bindchange" class="banner banner-style1" indicator-dots="{{false}}" autoplay="{{true}}" current="{{current}}" circular="{{true}}" interval="4000" duration="1000" display-multiple-items="1">
+            <swiper bindchange="bindchange" class="banner banner-style1" indicator-dots="{{false}}" autoplay="{{false}}" current="{{current}}" circular="{{true}}" interval="4000" duration="1000" display-multiple-items="1">
                 <swiper-item class="item" wx:for="{{gallery}}" wx:key="{{item.id}}">
-                    <image src="{{item.img_url}}" class="slide-image" mode="aspectFill" />
+                    <image bindtap="previewImage" data-src="{{item.img_url}}" src="{{item.img_url}}" class="slide-image" mode="aspectFill" />
                 </swiper-item>
             </swiper>
         </block>
@@ -31,10 +31,10 @@
             <view class='goods-intro'>{{goods.goods_brief}}</view>
         </view>
         <view class='r'>
-            <button class='share' hover-class="none" open-type='share'>
+            <view bindtap="shareTo" class='share'>
                 <image class='icon' src='http://lucky-icon.meiweiyuxian.com/hio/share.png'></image>
                 <view class='text'>分享</view>
-            </button>
+            </view>
         </view>
     </view>
     <view class='price-info'>
@@ -92,7 +92,7 @@
                 <view class='spec-item'>
                     <view class='name'>{{specificationList.name}}</view>
                     <view class="values">
-                        <view class="value {{item.checked ? 'selected' : ''}} {{item.goods_number <=0?'out-stock':''}}" bindtap="{{item.goods_number <=0?'':'clickSkuValue'}}" wx:for="{{specificationList.valueList}}" wx:key="{{item.id}}" data-value-id="{{item.id}}" data-index="{{index}}" data-name-id="{{item.specification_id}}">{{item.value}}</view>
+                        <view class="value {{item.checked ? 'selected' : ''}} {{item.goods_number <=0?'out-stock':''}}" bindtap="clickSkuValue" wx:for="{{specificationList.valueList}}" wx:key="{{item.id}}" data-value-id="{{item.id}}" data-index="{{index}}" data-name-id="{{item.specification_id}}">{{item.value}}</view>
                     </view>
                 </view>
                 <view class="number-item">
@@ -147,5 +147,24 @@
             <view class="cart-empty">商品已下架</view>
         </block>
     </view>
-
+    <view class="dialog {{ showShareDialog ? 'dialog_show' : '' }}">
+        <view class="dialog-mask2" bindtap="hideDialog"></view>
+        <view class="dialog-fixed dialog-share">
+            <view class="share-wrap">
+                <view class='content'>
+                    <view class="share-block">
+                        <button class='block share-btn' hover-class="none" open-type='share'>
+                            <image class="img" src="http://lucky-icon.meiweiyuxian.com/hio/weixin.png"></image>
+                            <view class="text">发给好友/发到微信群</view>
+                        </button>
+                        <view class="block" catchtap="createShareImage">
+                            <image class="img" src="http://lucky-icon.meiweiyuxian.com/hio/pyq.png"></image>
+                            <view class="text">保存分享图发朋友圈</view>
+                        </view>
+                    </view>
+                </view>
+            </view>
+            <view class="cancel" bindtap="hideDialog">取消</view>
+        </view>
+    </view>
 </view>
