1、删除一些无效css代码 2、解决wx:key的warinng 3、删除无用的函数 4、取消订单时停止定时器 5、针对订单操作后，返回订单列表没有刷新的问题，添加一个标志（不过不是最好的办法，暂时这样吧） 6、修复再来一单，提交一次后，再返回再提交时出现订单不存在的bug

--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,6 +1,6 @@
 <view class='container'>
     <view class="goodsList" wx:if="{{cartGoods.length > 0}}">
-        <view class="a-goods {{item.isTouchMove ? 'touch-move-active' : ''}}" wx:for="{{cartGoods}}" wx:key="{{item.id}}" bindtouchstart="touchstart" bindtouchmove="touchmove" data-index="{{index}}">
+        <view class="a-goods {{item.isTouchMove ? 'touch-move-active' : ''}}" wx:for="{{cartGoods}}" wx:key="id" bindtouchstart="touchstart" bindtouchmove="touchmove" data-index="{{index}}">
             <view class='content'>
                 <view wx:if="{{item.number >0 && item.is_on_sale == 1}}" class="checkbox {{item.checked ? 'checked' : ''}}" bindtap="checkedItem" data-item-index="{{index}}"></view>
                 <view wx:else class="checkbox"></view>
