--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,8 +10,8 @@
         <text class="txt">搜索, 共{{goodsCount}}款好物</text>
     </view>
     <view class='banner-wrap' wx:if="{{show_banner && banner.length > 0}}">
-        <swiper class="banner" indicator-dots="true" autoplay="{{false}}" interval="3000" duration="1000">
-            <swiper-item wx:for="{{banner}}" wx:key="{{item.id}}">
+        <swiper class="banner" indicator-dots="true" autoplay="{{false}}" interval="3000" duration="1000"   >
+            <swiper-item wx:for="{{banner}}" wx:key="id">
                 <navigator wx:if="{{item.link_type == 0}}" url="/pages/goods/goods?id={{item.goods_id}}">
                     <image src="{{item.image_url}}" background-size="cover"></image>
                 </navigator>
@@ -23,7 +23,7 @@
     </view>
     <view class='marquee_box' wx:if="{{notice.length>0 && show_notice == 1}}">
         <swiper vertical="{{true}}" class="notice-swiper" indicator-dots="{{false}}" autoplay="{{true}}" interval="2000" duration="1000">
-            <swiper-item wx:for="{{notice}}" wx:key="{{item.id}}" class='notice-wrap'>
+            <swiper-item wx:for="{{notice}}" wx:key="id" class='notice-wrap'>
 
                     <view class="icon">
                         <image src="http://lucky-icon.meiweiyuxian.com/hio/notice-icon.png" class='img'>
@@ -36,13 +36,13 @@
     </view>
     <swiper class="catalog-wrap" indicator-dots="{{false}}" indicator-color="#dedede" indicator-active-color="#e00000" wx:if="{{show_channel}}">
         <swiper-item class="first">
-            <view wx:for="{{channel}}" wx:if="{{item.sort_order < 7}}" wx:key="{{item.id}}" class='icon-navi' data-cateid="{{item.id}}" bindtap="goCategory">
+            <view wx:for="{{channel}}" wx:if="{{item.sort_order < 7}}" wx:key="id" class='icon-navi' data-cateid="{{item.id}}" bindtap="goCategory">
                 <image class='icon-img' src="{{item.icon_url}}"></image>
                 <view class='icon-text'>{{item.name}}</view>
             </view>
         </swiper-item>
         <swiper-item class="first" wx:if="{{channel.length > 6}}">
-            <navigator wx:for="{{channel}}" wx:key="{{item.id}}" hover-class="none" class='icon-navi' url="/pages/category/index?id={{item.id}}" wx:if="{{item.sort_order > 6 && item.sort_order < 12}}">
+            <navigator wx:for="{{channel}}" wx:key="id" hover-class="none" class='icon-navi' url="/pages/category/index?id={{item.id}}" wx:if="{{item.sort_order > 6 && item.sort_order < 12}}">
                 <image class='icon-img' src="{{item.icon_url}}"></image>
                 <view class='icon-text'>{{item.name}}</view>
             </navigator>
@@ -55,7 +55,7 @@
         </swiper-item>
     </swiper>
     <view class="goods-container">
-        <view class='topic-container' wx:for="{{floorGoods}}" wx:key="{{item.id}}">
+        <view class='topic-container' wx:for="{{floorGoods}}" wx:key="id">
             <view class='banner-container' bindtap="goCategory" data-cateid="{{item.id}}" wx:if="{{index_banner_img == 1}}">
                 <image mode='aspectFill' style="width:100%;height:{{item.height}}rpx" src='{{item.banner}}'>
                 </image>
@@ -69,7 +69,7 @@
                 </view>
             </view>
             <view class='list-wrap clearfix'>
-                <view class="new-box {{(iindex+1)%3 == 0?'no-margin':''}}" wx:for="{{item.goodsList}}" wx:for-index="iindex" wx:for-item="iitem" wx:key="{{iitem.id}}">
+                <view class="new-box {{(iindex+1)%3 == 0?'no-margin':''}}" wx:for="{{item.goodsList}}" wx:for-index="iindex" wx:for-item="iitem" wx:key="id">
                     <navigator hover-class='none' class='navi-url' url="/pages/goods/goods?id={{iitem.id}}">
                         <view class="box">
                             <image src="{{iitem.list_pic_url}}" class="image">
