--- a/pages/order-check/index.wxml
+++ b/pages/order-check/index.wxml
@@ -20,7 +20,7 @@
             <view class="list-title">商品信息</view>
             <view class="a-goods">
                 <view class="img-box">
-                    <view class='image-wrap' wx:for="{{checkedGoodsList}}" wx:if="{{index<5}}" wx:key="{{item.id}}">
+                    <view class='image-wrap' wx:for="{{checkedGoodsList}}" wx:if="{{index<5}}" wx:key="id">
                         <image src="{{item.list_pic_url}}" class="goods-image"></image>
                     </view>
                 </view>
