--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -14,7 +14,7 @@
                 <image class="icon" bindtap="clearHistory"></image>
             </view>
             <view class="b">
-                <view class="item" bindtap="onKeywordTap" data-keyword="{{item}}" wx:for="{{historyKeyword}}" hover-class="navigator-hover" wx:key="{{item.id}}">{{item}}</view>
+                <view class="item" bindtap="onKeywordTap" data-keyword="{{item}}" wx:for="{{historyKeyword}}" hover-class="navigator-hover" wx:key="id">{{item}}</view>
             </view>
         </view>
         <view class="serach-keywords search-hot" wx:if="{{!keyword}}">
@@ -22,11 +22,11 @@
                 <text class="title">热门搜索</text>
             </view>
             <view class="b">
-                <view class="item {{item.is_hot === 1 ? 'active' : ''}}" hover-class="navigator-hover" bindtap="onKeywordTap" data-keyword="{{item.keyword}}" wx:for="{{hotKeyword}}" wx:key="{{item.id}}">{{item.keyword}}</view>
+                <view class="item {{item.is_hot === 1 ? 'active' : ''}}" hover-class="navigator-hover" bindtap="onKeywordTap" data-keyword="{{item.keyword}}" wx:for="{{hotKeyword}}" wx:key="id">{{item.keyword}}</view>
             </view>
         </view>
         <view class="shelper-list" wx:if="{{keyword}}">
-            <view class="item" hover-class="navigator-hover" wx:for="{{helpKeyword}}" bindtap="onKeywordTap" data-keyword="{{item}}" wx:key="{{item.id}}">{{item}}</view>
+            <view class="item" hover-class="navigator-hover" wx:for="{{helpKeyword}}" bindtap="onKeywordTap" data-keyword="{{item}}" wx:key="id">{{item}}</view>
         </view>
     </view>
 
@@ -47,7 +47,7 @@
         <view class="cate-item">
             <view class="b">
                 <view class='list-wrap clearfix'>
-                    <view class="goods-box {{(iindex+1)%2 == 0?'no-margin':''}}" wx:for="{{goodsList}}" wx:for-index="iindex" wx:for-item="iitem" wx:key="{{iitem.id}}">
+                    <view class="goods-box {{(iindex+1)%2 == 0?'no-margin':''}}" wx:for="{{goodsList}}" wx:for-index="iindex" wx:for-item="iitem" wx:key="id">
                         <navigator hover-class='none' class='navi-url' url="/pages/goods/goods?id={{iitem.id}}">
                             <view class="box">
                                 <image src="{{iitem.list_pic_url}}" class="image">
