--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -14,6 +14,29 @@
     width: 100%;
 }
 
+
+.loading {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.loading .img {
+    width: 90rpx;
+    height: 90rpx;
+}
+
+.loading .text {
+    margin-top: 20rpx;
+    width: 100%;
+    font-size: 24rpx;
+    color: #999;
+    text-align: center;
+}
+
 /* banner start  */
 
 .banner-wrap {
